--- a/constants.ipynb
+++ b/constants.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,14 @@
     "import seaborn as sns\n",
     "import plotly.express as px \n",
     "import yfinance as yf\n",
-    "import polars as pl"
+    "\n",
+    "\n",
+    "# Filter out the specific warning\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "from utils import general_utils\n",
+    "from utils import trading_api"
    ]
   },
   {
@@ -31,7 +38,15 @@
    "name": "trading"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.8"
   }
  },
