--- a/LeetCode/heap.ipynb
+++ b/LeetCode/heap.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Exploration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -217,6 +224,114 @@
    ],
    "source": [
     "input_list[4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kth smallest element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2980607668503462\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.12040617, 0.14384801, 0.22948445, 0.29806077, 0.4230669 ,\n",
+       "       0.55311934, 0.63762656, 0.78447164, 0.83278236, 0.95292076])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_kth_smallest(arr: Iterable, k: int):\n",
+    "    \n",
+    "    h = []\n",
+    "    if not isinstance(arr, list):\n",
+    "        arr = arr.tolist()\n",
+    "    L = len(arr)\n",
+    "    for i in range(L):\n",
+    "        heapq.heappush(h, -arr[i])\n",
+    "        if i > k:\n",
+    "            heapq.heappop(h) # Pushes the smallest element out of the heap\n",
+    "    return -h[0]\n",
+    "\n",
+    "N = 10\n",
+    "input = np.random.random(N)\n",
+    "h = find_kth_smallest(arr=input, k=3)\n",
+    "print(h)  \n",
+    "\n",
+    "# Validation\n",
+    "input.sort()\n",
+    "input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kth largest element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.47807469022185745\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.0252613 , 0.0708132 , 0.23115199, 0.24043398, 0.32648946,\n",
+       "       0.44744703, 0.47807469, 0.68059494, 0.80353045, 0.93819994])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_kth_largest(arr: Iterable, k: int):\n",
+    "    \n",
+    "    h = []\n",
+    "    if not isinstance(arr, list):\n",
+    "        arr = arr.tolist()\n",
+    "    L = len(arr)\n",
+    "    for i in range(L):\n",
+    "        heapq.heappush(h, arr[i])\n",
+    "        if i > k:\n",
+    "            heapq.heappop(h) # Pushes the smallest element out of the heap\n",
+    "    return h[0]\n",
+    "\n",
+    "N = 10\n",
+    "input = np.random.random(N)\n",
+    "h = find_kth_largest(arr=input, k=3)\n",
+    "print(h)  \n",
+    "\n",
+    "# Validation\n",
+    "input.sort()\n",
+    "input"
    ]
   },
   {
