--- a/DS/pytorch/torch_exploration.ipynb
+++ b/DS/pytorch/torch_exploration.ipynb
@@ -2113,11 +2113,11 @@
     "        super().__init__()\n",
     "        self.flatten = nn.Flatten()\n",
     "        self.linear_relu_stack = nn.Sequential(\n",
-    "            nn.Linear(28*28, 512),\n",
+    "            nn.Linear(in_features=28*28, out_features=512),\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(512, 512),\n",
+    "            nn.Linear(in_features=512, out_features=512),\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(512, 10))\n",
+    "            nn.Linear(in_features=512, out_features=10))\n",
     "        \n",
     "    def forward(self,x):\n",
     "        x = self.flatten(x)\n",
@@ -2526,6 +2526,55 @@
    ],
    "source": [
     "model.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model structure: NN(\n",
+      "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
+      "  (linear_relu_stack): Sequential(\n",
+      "    (0): Linear(in_features=784, out_features=512, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=512, out_features=512, bias=True)\n",
+      "    (3): ReLU()\n",
+      "    (4): Linear(in_features=512, out_features=10, bias=True)\n",
+      "  )\n",
+      ")\n",
+      "\n",
+      "\n",
+      "Layer: linear_relu_stack.0.weight | Size: torch.Size([512, 784]) | Values : tensor([[ 0.0149,  0.0301,  0.0256,  ..., -0.0333,  0.0337,  0.0119],\n",
+      "        [ 0.0169,  0.0149,  0.0306,  ..., -0.0313,  0.0307, -0.0045]],\n",
+      "       grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.0.bias | Size: torch.Size([512]) | Values : tensor([-0.0022, -0.0078], grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.2.weight | Size: torch.Size([512, 512]) | Values : tensor([[-0.0216, -0.0265, -0.0196,  ..., -0.0198,  0.0315, -0.0279],\n",
+      "        [ 0.0002, -0.0087,  0.0077,  ...,  0.0152, -0.0340,  0.0294]],\n",
+      "       grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.2.bias | Size: torch.Size([512]) | Values : tensor([-0.0392,  0.0153], grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.4.weight | Size: torch.Size([10, 512]) | Values : tensor([[-0.0173,  0.0316,  0.0461,  ..., -0.0044, -0.0528,  0.0197],\n",
+      "        [ 0.0120,  0.0223,  0.0599,  ..., -0.0478,  0.0766, -0.0187]],\n",
+      "       grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.4.bias | Size: torch.Size([10]) | Values : tensor([ 0.0179, -0.0120], grad_fn=<SliceBackward0>) \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Model structure: {model}\\n\\n\")\n",
+    "\n",
+    "for name, param in model.named_parameters():\n",
+    "    print(f\"Layer: {name} | Size: {param.size()} | Values : {param[:2]} \\n\")"
    ]
   },
   {
@@ -2993,10 +3042,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mInit signature:\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSoftmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNoneType\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDocstring:\u001b[0m     \n",
+      "Applies the Softmax function to an n-dimensional input Tensor\n",
+      "rescaling them so that the elements of the n-dimensional output Tensor\n",
+      "lie in the range [0,1] and sum to 1.\n",
+      "\n",
+      "Softmax is defined as:\n",
+      "\n",
+      ".. math::\n",
+      "    \\text{Softmax}(x_{i}) = \\frac{\\exp(x_i)}{\\sum_j \\exp(x_j)}\n",
+      "\n",
+      "When the input Tensor is a sparse tensor then the unspecified\n",
+      "values are treated as ``-inf``.\n",
+      "\n",
+      "Shape:\n",
+      "    - Input: :math:`(*)` where `*` means, any number of additional\n",
+      "      dimensions\n",
+      "    - Output: :math:`(*)`, same shape as the input\n",
+      "\n",
+      "Returns:\n",
+      "    a Tensor of the same dimension and shape as the input with\n",
+      "    values in the range [0, 1]\n",
+      "\n",
+      "Args:\n",
+      "    dim (int): A dimension along which Softmax will be computed (so every slice\n",
+      "        along dim will sum to 1).\n",
+      "\n",
+      ".. note::\n",
+      "    This module doesn't work directly with NLLLoss,\n",
+      "    which expects the Log to be computed between the Softmax and itself.\n",
+      "    Use `LogSoftmax` instead (it's faster and has better numerical properties).\n",
+      "\n",
+      "Examples::\n",
+      "\n",
+      "    >>> m = nn.Softmax(dim=1)\n",
+      "    >>> input = torch.randn(2, 3)\n",
+      "    >>> output = m(input)\n",
+      "\u001b[0;31mInit docstring:\u001b[0m Initialize internal Module state, shared by both nn.Module and ScriptModule.\n",
+      "\u001b[0;31mFile:\u001b[0m           ~/Desktop/Projects/.venv/lib/python3.8/site-packages/torch/nn/modules/activation.py\n",
+      "\u001b[0;31mType:\u001b[0m           type\n",
+      "\u001b[0;31mSubclasses:\u001b[0m     Softmax"
+     ]
+    }
+   ],
+   "source": [
+    "nn.Softmax?"
+   ]
   },
   {
    "cell_type": "code",
