--- a/DS/pytorch/hyperparameter_tuning.ipynb
+++ b/DS/pytorch/hyperparameter_tuning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "import torch.optim as optim \n",
     "from torch.utils.data import random_split \n",
     "import torchvision\n",
+    "import torchvision.transforms as transforms\n",
     "\n",
     "import os\n"
    ]
@@ -50,10 +51,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./cifar_data/cifar-10-python.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 170498071/170498071 [01:28<00:00, 1921681.60it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./cifar_data/cifar-10-python.tar.gz to ./cifar_data\n",
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_dir = \"./cifar_data\"\n",
+    "\n",
+    "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])\n",
+    "trainset = torchvision.datasets.CIFAR10(root=data_dir, train=True, download=True, transform=transform)\n",
+    "testset = torchvision.datasets.CIFAR10(root=data_dir, train=False, download=True, transform=transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define Model\n",
+    "\n",
+    "class NN(nn.Module):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        \n",
+    "        return x\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
