--- a/DS/ML_prep/ML_prep.ipynb
+++ b/DS/ML_prep/ML_prep.ipynb
@@ -654,6 +654,113 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "concatenate((a1, a2, ...), axis=0, out=None, dtype=None, casting=\"same_kind\")\n",
+      "\n",
+      "Join a sequence of arrays along an existing axis.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "a1, a2, ... : sequence of array_like\n",
+      "    The arrays must have the same shape, except in the dimension\n",
+      "    corresponding to `axis` (the first, by default).\n",
+      "axis : int, optional\n",
+      "    The axis along which the arrays will be joined.  If axis is None,\n",
+      "    arrays are flattened before use.  Default is 0.\n",
+      "out : ndarray, optional\n",
+      "    If provided, the destination to place the result. The shape must be\n",
+      "    correct, matching that of what concatenate would have returned if no\n",
+      "    out argument were specified.\n",
+      "dtype : str or dtype\n",
+      "    If provided, the destination array will have this dtype. Cannot be\n",
+      "    provided together with `out`.\n",
+      "\n",
+      "    .. versionadded:: 1.20.0\n",
+      "\n",
+      "casting : {'no', 'equiv', 'safe', 'same_kind', 'unsafe'}, optional\n",
+      "    Controls what kind of data casting may occur. Defaults to 'same_kind'.\n",
+      "\n",
+      "    .. versionadded:: 1.20.0\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "res : ndarray\n",
+      "    The concatenated array.\n",
+      "\n",
+      "See Also\n",
+      "--------\n",
+      "ma.concatenate : Concatenate function that preserves input masks.\n",
+      "array_split : Split an array into multiple sub-arrays of equal or\n",
+      "              near-equal size.\n",
+      "split : Split array into a list of multiple sub-arrays of equal size.\n",
+      "hsplit : Split array into multiple sub-arrays horizontally (column wise).\n",
+      "vsplit : Split array into multiple sub-arrays vertically (row wise).\n",
+      "dsplit : Split array into multiple sub-arrays along the 3rd axis (depth).\n",
+      "stack : Stack a sequence of arrays along a new axis.\n",
+      "block : Assemble arrays from blocks.\n",
+      "hstack : Stack arrays in sequence horizontally (column wise).\n",
+      "vstack : Stack arrays in sequence vertically (row wise).\n",
+      "dstack : Stack arrays in sequence depth wise (along third dimension).\n",
+      "column_stack : Stack 1-D arrays as columns into a 2-D array.\n",
+      "\n",
+      "Notes\n",
+      "-----\n",
+      "When one or more of the arrays to be concatenated is a MaskedArray,\n",
+      "this function will return a MaskedArray object instead of an ndarray,\n",
+      "but the input masks are *not* preserved. In cases where a MaskedArray\n",
+      "is expected as input, use the ma.concatenate function from the masked\n",
+      "array module instead.\n",
+      "\n",
+      "Examples\n",
+      "--------\n",
+      ">>> a = np.array([[1, 2], [3, 4]])\n",
+      ">>> b = np.array([[5, 6]])\n",
+      ">>> np.concatenate((a, b), axis=0)\n",
+      "array([[1, 2],\n",
+      "       [3, 4],\n",
+      "       [5, 6]])\n",
+      ">>> np.concatenate((a, b.T), axis=1)\n",
+      "array([[1, 2, 5],\n",
+      "       [3, 4, 6]])\n",
+      ">>> np.concatenate((a, b), axis=None)\n",
+      "array([1, 2, 3, 4, 5, 6])\n",
+      "\n",
+      "This function will not preserve masking of MaskedArray inputs.\n",
+      "\n",
+      ">>> a = np.ma.arange(3)\n",
+      ">>> a[1] = np.ma.masked\n",
+      ">>> b = np.arange(2, 5)\n",
+      ">>> a\n",
+      "masked_array(data=[0, --, 2],\n",
+      "             mask=[False,  True, False],\n",
+      "       fill_value=999999)\n",
+      ">>> b\n",
+      "array([2, 3, 4])\n",
+      ">>> np.concatenate([a, b])\n",
+      "masked_array(data=[0, 1, 2, 2, 3, 4],\n",
+      "             mask=False,\n",
+      "       fill_value=999999)\n",
+      ">>> np.ma.concatenate([a, b])\n",
+      "masked_array(data=[0, --, 2, 2, 3, 4],\n",
+      "             mask=[False,  True, False, False, False, False],\n",
+      "       fill_value=999999)\n",
+      "\u001b[0;31mType:\u001b[0m      function"
+     ]
+    }
+   ],
+   "source": [
+    "np.concatenate?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
    "outputs": [],
@@ -740,6 +847,115 @@
     "\n",
     "# Print the learned centroids\n",
     "print(kmeans.centroids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 8.08594525,  9.22704964],\n",
+       "        [ 1.43211325, -1.72891002]],\n",
+       "\n",
+       "       [[ 7.70136893,  9.41146569],\n",
+       "        [ 1.04753693, -1.54449397]]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "centroids = X[np.random.choice(X.shape[0], 2, replace=False)]\n",
+    "X[:2, np.newaxis] - centroids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 1, 2)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[:, np.newaxis].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 2)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 2)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "centroids.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1,\n",
+       "       1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argmin(np.linalg.norm(X[:, np.newaxis] - centroids, axis=2), axis=1)"
    ]
   },
   {
