--- a/DS/pytorch/transformer.ipynb
+++ b/DS/pytorch/transformer.ipynb
@@ -959,32 +959,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[107], line 41\u001b[0m\n\u001b[1;32m     37\u001b[0m             idx \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat((idx, idx_next), dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     38\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m idx\n\u001b[0;32m---> 41\u001b[0m m \u001b[38;5;241m=\u001b[39m \u001b[43mBiGramLanguageModel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvocab_size\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     42\u001b[0m logits, loss \u001b[38;5;241m=\u001b[39m m(xb, yb)\n\u001b[1;32m     43\u001b[0m \u001b[38;5;28mprint\u001b[39m(logits\u001b[38;5;241m.\u001b[39mshape)\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() takes 1 positional argument but 2 were given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mInit signature:\u001b[0m\n",
+      "\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModuleList\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mmodules\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mIterable\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodules\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodule\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModule\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNoneType\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDocstring:\u001b[0m     \n",
+      "Holds submodules in a list.\n",
+      "\n",
+      ":class:`~torch.nn.ModuleList` can be indexed like a regular Python list, but\n",
+      "modules it contains are properly registered, and will be visible by all\n",
+      ":class:`~torch.nn.Module` methods.\n",
+      "\n",
+      "Args:\n",
+      "    modules (iterable, optional): an iterable of modules to add\n",
+      "\n",
+      "Example::\n",
+      "\n",
+      "    class MyModule(nn.Module):\n",
+      "        def __init__(self):\n",
+      "            super().__init__()\n",
+      "            self.linears = nn.ModuleList([nn.Linear(10, 10) for i in range(10)])\n",
+      "\n",
+      "        def forward(self, x):\n",
+      "            # ModuleList can act as an iterable, or be indexed using ints\n",
+      "            for i, l in enumerate(self.linears):\n",
+      "                x = self.linears[i // 2](x) + l(x)\n",
+      "            return x\n",
+      "\u001b[0;31mInit docstring:\u001b[0m Initialize internal Module state, shared by both nn.Module and ScriptModule.\n",
+      "\u001b[0;31mFile:\u001b[0m           ~/Desktop/Projects/.venv/lib/python3.8/site-packages/torch/nn/modules/container.py\n",
+      "\u001b[0;31mType:\u001b[0m           type\n",
+      "\u001b[0;31mSubclasses:\u001b[0m     ParametrizationList"
      ]
     }
    ],
    "source": [
+    "nn.ModuleList?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## BiGram language model\n",
     "n_embd = 32 \n",
+    "\n",
+    "# Attention Head\n",
+    "class Head(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, head_size):\n",
+    "        super().__init__()\n",
+    "        self.key = nn.Linear(n_embd, head_size, bias=False) \n",
+    "        self.query = nn.Linear(n_embd, head_size, bias=False)\n",
+    "        self.value = nn.Linear(n_embd, head_size, bias=False)\n",
+    "        self.register_buffer('tril', torch.tril(torch.ones(block_size, block_size)))\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        B, T, C = x.shape \n",
+    "        k = self.key(x)\n",
+    "        q = self.query(x)\n",
+    "        \n",
+    "        wei = q @ k.transpose(-2,-1) * (C**-0.5)\n",
+    "        wei = wei.masked_fill(self.tril[:T, :T]==0, float(\"-inf\"))\n",
+    "        wei = F.softmax(wei, dim=-1)\n",
+    "        v = self.value(x)\n",
+    "        out = wei @ v\n",
+    "        return out\n",
+    "    \n",
+    "\n",
+    "class MultiHeadAttention(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, num_heads, head_size):\n",
+    "        super().__init__()\n",
+    "        self.heads = nn.ModuleList([Head(head_size) for _ in range(num_heads)])\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        return torch.cat([h(x) for h in self.heads], dim=-1)\n",
+    "    \n",
+    "\n",
+    "\n",
     "class BiGramLanguageModel(nn.Module):\n",
     "    \n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.token_embedding_table = nn.Embedding(vocab_size, n_embd)\n",
     "        self.position_embedding_table = nn.Embedding(block_size, n_embd)\n",
+    "        self.sa_head = Head(n_embd)\n",
     "        self.lm_head = nn.Linear(n_embd, vocab_size)\n",
-    "        \n",
     "        \n",
     "    def forward(self, idx, targets=None):\n",
     "        B, T = idx.shape\n",
@@ -992,6 +1061,7 @@
     "        tok_emb = self.token_embedding_table(idx)\n",
     "        pos_emb = self.position_embedding_table(torch.arange(T, device=device))\n",
     "        x = tok_emb + pos_emb\n",
+    "        x = self.sa_head(x) # Apply one-head of self attention\n",
     "        logits = self.lm_head(x)\n",
     "        \n",
     "        if targets is None:\n",
@@ -1006,8 +1076,9 @@
     "    \n",
     "    def generate(self, idx, max_new_tokens):\n",
     "        for _ in range(max_new_tokens):\n",
+    "            idx_cond = idx[:, -block_size:]\n",
     "            # get the predictions\n",
-    "            logits, loss = self(idx)\n",
+    "            logits, loss = self(idx_cond)\n",
     "            logits = logits[:, -1, :]\n",
     "            # apply softmax to get probabilities\n",
     "            probs = F.softmax(logits, dim=-1)\n",
@@ -1015,17 +1086,24 @@
     "            idx = torch.cat((idx, idx_next), dim=1)\n",
     "        return idx\n",
     "      \n",
-    "    \n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "m = BiGramLanguageModel()\n",
     "logits, loss = m(xb, yb)\n",
     "print(logits.shape)\n",
     "print(loss)\n",
     "        \n",
-    "        \n",
-    "        \n",
+    "             \n",
     "idx = torch.zeros((1,1), dtype=torch.long)\n",
-    "print(decode())\n",
-    "    "
+    "print(decode())"
    ]
   },
   {
@@ -1278,6 +1356,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "tril(input, diagonal=0, *, out=None) -> Tensor\n",
+      "\n",
+      "Returns the lower triangular part of the matrix (2-D tensor) or batch of matrices\n",
+      ":attr:`input`, the other elements of the result tensor :attr:`out` are set to 0.\n",
+      "\n",
+      "The lower triangular part of the matrix is defined as the elements on and\n",
+      "below the diagonal.\n",
+      "\n",
+      "The argument :attr:`diagonal` controls which diagonal to consider. If\n",
+      ":attr:`diagonal` = 0, all elements on and below the main diagonal are\n",
+      "retained. A positive value includes just as many diagonals above the main\n",
+      "diagonal, and similarly a negative value excludes just as many diagonals below\n",
+      "the main diagonal. The main diagonal are the set of indices\n",
+      ":math:`\\lbrace (i, i) \\rbrace` for :math:`i \\in [0, \\min\\{d_{1}, d_{2}\\} - 1]` where\n",
+      ":math:`d_{1}, d_{2}` are the dimensions of the matrix.\n",
+      "\n",
+      "Args:\n",
+      "    input (Tensor): the input tensor.\n",
+      "    diagonal (int, optional): the diagonal to consider\n",
+      "\n",
+      "Keyword args:\n",
+      "    out (Tensor, optional): the output tensor.\n",
+      "\n",
+      "Example::\n",
+      "\n",
+      "    >>> a = torch.randn(3, 3)\n",
+      "    >>> a\n",
+      "    tensor([[-1.0813, -0.8619,  0.7105],\n",
+      "            [ 0.0935,  0.1380,  2.2112],\n",
+      "            [-0.3409, -0.9828,  0.0289]])\n",
+      "    >>> torch.tril(a)\n",
+      "    tensor([[-1.0813,  0.0000,  0.0000],\n",
+      "            [ 0.0935,  0.1380,  0.0000],\n",
+      "            [-0.3409, -0.9828,  0.0289]])\n",
+      "\n",
+      "    >>> b = torch.randn(4, 6)\n",
+      "    >>> b\n",
+      "    tensor([[ 1.2219,  0.5653, -0.2521, -0.2345,  1.2544,  0.3461],\n",
+      "            [ 0.4785, -0.4477,  0.6049,  0.6368,  0.8775,  0.7145],\n",
+      "            [ 1.1502,  3.2716, -1.1243, -0.5413,  0.3615,  0.6864],\n",
+      "            [-0.0614, -0.7344, -1.3164, -0.7648, -1.4024,  0.0978]])\n",
+      "    >>> torch.tril(b, diagonal=1)\n",
+      "    tensor([[ 1.2219,  0.5653,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+      "            [ 0.4785, -0.4477,  0.6049,  0.0000,  0.0000,  0.0000],\n",
+      "            [ 1.1502,  3.2716, -1.1243, -0.5413,  0.0000,  0.0000],\n",
+      "            [-0.0614, -0.7344, -1.3164, -0.7648, -1.4024,  0.0000]])\n",
+      "    >>> torch.tril(b, diagonal=-1)\n",
+      "    tensor([[ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+      "            [ 0.4785,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+      "            [ 1.1502,  3.2716,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+      "            [-0.0614, -0.7344, -1.3164,  0.0000,  0.0000,  0.0000]])\n",
+      "\u001b[0;31mType:\u001b[0m      builtin_function_or_method"
+     ]
+    }
+   ],
+   "source": [
+    "torch.tril?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "triu(input, diagonal=0, *, out=None) -> Tensor\n",
+      "\n",
+      "Returns the upper triangular part of a matrix (2-D tensor) or batch of matrices\n",
+      ":attr:`input`, the other elements of the result tensor :attr:`out` are set to 0.\n",
+      "\n",
+      "The upper triangular part of the matrix is defined as the elements on and\n",
+      "above the diagonal.\n",
+      "\n",
+      "The argument :attr:`diagonal` controls which diagonal to consider. If\n",
+      ":attr:`diagonal` = 0, all elements on and above the main diagonal are\n",
+      "retained. A positive value excludes just as many diagonals above the main\n",
+      "diagonal, and similarly a negative value includes just as many diagonals below\n",
+      "the main diagonal. The main diagonal are the set of indices\n",
+      ":math:`\\lbrace (i, i) \\rbrace` for :math:`i \\in [0, \\min\\{d_{1}, d_{2}\\} - 1]` where\n",
+      ":math:`d_{1}, d_{2}` are the dimensions of the matrix.\n",
+      "\n",
+      "Args:\n",
+      "    input (Tensor): the input tensor.\n",
+      "    diagonal (int, optional): the diagonal to consider\n",
+      "\n",
+      "Keyword args:\n",
+      "    out (Tensor, optional): the output tensor.\n",
+      "\n",
+      "Example::\n",
+      "\n",
+      "    >>> a = torch.randn(3, 3)\n",
+      "    >>> a\n",
+      "    tensor([[ 0.2309,  0.5207,  2.0049],\n",
+      "            [ 0.2072, -1.0680,  0.6602],\n",
+      "            [ 0.3480, -0.5211, -0.4573]])\n",
+      "    >>> torch.triu(a)\n",
+      "    tensor([[ 0.2309,  0.5207,  2.0049],\n",
+      "            [ 0.0000, -1.0680,  0.6602],\n",
+      "            [ 0.0000,  0.0000, -0.4573]])\n",
+      "    >>> torch.triu(a, diagonal=1)\n",
+      "    tensor([[ 0.0000,  0.5207,  2.0049],\n",
+      "            [ 0.0000,  0.0000,  0.6602],\n",
+      "            [ 0.0000,  0.0000,  0.0000]])\n",
+      "    >>> torch.triu(a, diagonal=-1)\n",
+      "    tensor([[ 0.2309,  0.5207,  2.0049],\n",
+      "            [ 0.2072, -1.0680,  0.6602],\n",
+      "            [ 0.0000, -0.5211, -0.4573]])\n",
+      "\n",
+      "    >>> b = torch.randn(4, 6)\n",
+      "    >>> b\n",
+      "    tensor([[ 0.5876, -0.0794, -1.8373,  0.6654,  0.2604,  1.5235],\n",
+      "            [-0.2447,  0.9556, -1.2919,  1.3378, -0.1768, -1.0857],\n",
+      "            [ 0.4333,  0.3146,  0.6576, -1.0432,  0.9348, -0.4410],\n",
+      "            [-0.9888,  1.0679, -1.3337, -1.6556,  0.4798,  0.2830]])\n",
+      "    >>> torch.triu(b, diagonal=1)\n",
+      "    tensor([[ 0.0000, -0.0794, -1.8373,  0.6654,  0.2604,  1.5235],\n",
+      "            [ 0.0000,  0.0000, -1.2919,  1.3378, -0.1768, -1.0857],\n",
+      "            [ 0.0000,  0.0000,  0.0000, -1.0432,  0.9348, -0.4410],\n",
+      "            [ 0.0000,  0.0000,  0.0000,  0.0000,  0.4798,  0.2830]])\n",
+      "    >>> torch.triu(b, diagonal=-1)\n",
+      "    tensor([[ 0.5876, -0.0794, -1.8373,  0.6654,  0.2604,  1.5235],\n",
+      "            [-0.2447,  0.9556, -1.2919,  1.3378, -0.1768, -1.0857],\n",
+      "            [ 0.0000,  0.3146,  0.6576, -1.0432,  0.9348, -0.4410],\n",
+      "            [ 0.0000,  0.0000, -1.3337, -1.6556,  0.4798,  0.2830]])\n",
+      "\u001b[0;31mType:\u001b[0m      builtin_function_or_method"
+     ]
+    }
+   ],
+   "source": [
+    "torch.triu?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 99,
    "metadata": {},
    "outputs": [
@@ -1363,30 +1587,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([4, 8, 32])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# version 4: self attention\n",
     "torch.manual_seed(32)\n",
     "B, T, C = 4, 8, 32\n",
     "x = torch.randn(B, T, C)\n",
     "\n",
+    "# single head of self-attention\n",
+    "head_size = 16\n",
+    "key = nn.Linear(C, head_size, bias=False)\n",
+    "query = nn.Linear(C, head_size, bias=False) \n",
+    "value = nn.Linear(C, head_size, bias=False) \n",
+    "k = key(x)   # (B, T, 16)\n",
+    "q = query(x) # (B, T, 16) \n",
+    "wei = q @ k.transpose(-2, -1) * (head_size ** -0.5) # (B, T, 16) @ (B, 16, T) -> (B, T, T)\n",
+    "\n",
+    "\n",
     "tril = torch.tril(torch.ones(T,T))\n",
-    "wei = torch.zeros((T,T))\n",
+    "# wei = torch.zeros((T,T))\n",
     "wei = wei.masked_fill(tril == 0, float(\"-inf\"))\n",
     "wei = F.softmax(wei, dim=1)\n",
-    "out = wei @ x\n",
-    "print(out.shape)  \n",
+    "\n",
+    "v = value(x)\n",
+    "out = wei @ v\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.0295, grad_fn=<VarBackward0>)"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wei.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 8, 16])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(out.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Linear(in_features=32, out_features=16, bias=False)"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 8, 8])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(wei.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[6.0993e-04, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+       "         0.0000e+00, 0.0000e+00],\n",
+       "        [4.0601e-02, 3.3601e-01, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+       "         0.0000e+00, 0.0000e+00],\n",
+       "        [1.6466e-01, 2.3249e-02, 1.6188e-01, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+       "         0.0000e+00, 0.0000e+00],\n",
+       "        [4.3196e-03, 1.4865e-02, 2.0784e-01, 7.2059e-02, 0.0000e+00, 0.0000e+00,\n",
+       "         0.0000e+00, 0.0000e+00],\n",
+       "        [9.5033e-03, 2.0224e-01, 1.2215e-01, 5.7357e-01, 5.2376e-02, 0.0000e+00,\n",
+       "         0.0000e+00, 0.0000e+00],\n",
+       "        [5.0444e-02, 3.8379e-01, 1.9756e-01, 2.9198e-01, 6.7340e-02, 1.0014e-01,\n",
+       "         0.0000e+00, 0.0000e+00],\n",
+       "        [6.4829e-02, 1.8269e-02, 1.2614e-01, 1.2283e-02, 7.7971e-01, 1.2648e-01,\n",
+       "         1.0753e-01, 0.0000e+00],\n",
+       "        [6.6503e-01, 2.1585e-02, 1.8442e-01, 5.0104e-02, 1.0058e-01, 7.7339e-01,\n",
+       "         8.9247e-01, 1.0000e+00]], grad_fn=<SelectBackward0>)"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wei[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "transpose(dim0, dim1) -> Tensor\n",
+      "\n",
+      "See :func:`torch.transpose`\n",
+      "\u001b[0;31mType:\u001b[0m      builtin_function_or_method"
+     ]
+    }
+   ],
+   "source": [
+    "k.transpose?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([16, 8, 4])"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k.T.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 16])"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 32])"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
    ]
   },
   {
@@ -1394,7 +1812,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "            \n",
+    "        "
+   ]
   }
  ],
  "metadata": {
