--- a/DS/pytorch/transformer.ipynb
+++ b/DS/pytorch/transformer.ipynb
@@ -1010,7 +1010,23 @@
    "outputs": [],
    "source": [
     "## BiGram language model\n",
-    "n_embd = 32 \n",
+    "n_embd = 32\n",
+    "dropout = 0.2\n",
+    "\n",
+    "class FeedForward(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, n_embd):\n",
+    "        super().__init__()\n",
+    "        self.net = nn.Sequential(\n",
+    "            nn.Linear(n_embd, 4 * n_embd),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(4 * n_embd, n_embd),\n",
+    "            nn.Dropout(dropout),\n",
+    "        )\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        return self.net(x)\n",
+    "        \n",
     "\n",
     "# Attention Head\n",
     "class Head(nn.Module):\n",
@@ -1021,6 +1037,7 @@
     "        self.query = nn.Linear(n_embd, head_size, bias=False)\n",
     "        self.value = nn.Linear(n_embd, head_size, bias=False)\n",
     "        self.register_buffer('tril', torch.tril(torch.ones(block_size, block_size)))\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
     "    def forward(self, x):\n",
     "        B, T, C = x.shape \n",
@@ -1030,6 +1047,7 @@
     "        wei = q @ k.transpose(-2,-1) * (C**-0.5)\n",
     "        wei = wei.masked_fill(self.tril[:T, :T]==0, float(\"-inf\"))\n",
     "        wei = F.softmax(wei, dim=-1)\n",
+    "        wei = self.dropout(wei)\n",
     "        v = self.value(x)\n",
     "        out = wei @ v\n",
     "        return out\n",
@@ -1040,11 +1058,30 @@
     "    def __init__(self, num_heads, head_size):\n",
     "        super().__init__()\n",
     "        self.heads = nn.ModuleList([Head(head_size) for _ in range(num_heads)])\n",
+    "        self.proj = nn.Linear(n_embd, n_embd)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
     "    def forward(self, x):\n",
-    "        return torch.cat([h(x) for h in self.heads], dim=-1)\n",
+    "        out = torch.cat([h(x) for h in self.heads], dim=-1)\n",
+    "        out = self.dropout(self.proj(out))\n",
+    "        return out\n",
     "    \n",
     "\n",
+    "class Block(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, n_embd, n_head):\n",
+    "        super().__init__()\n",
+    "        head_size = n_embd // n_head\n",
+    "        self.sa = MultiHeadAttention(n_head, head_size)\n",
+    "        self.ffwd = FeedForward(n_embd)\n",
+    "        self.ln1 = nn.LayerNorm(n_embd)\n",
+    "        self.ln2 = nn.LayerNorm(n_embd)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = x + self.sa(self.ln1(x)) # Adding x -> serves as residual connections\n",
+    "        x = x + self.ffwd(self.ln2(x))\n",
+    "        return x\n",
+    "           \n",
     "\n",
     "class BiGramLanguageModel(nn.Module):\n",
     "    \n",
@@ -1052,8 +1089,14 @@
     "        super().__init__()\n",
     "        self.token_embedding_table = nn.Embedding(vocab_size, n_embd)\n",
     "        self.position_embedding_table = nn.Embedding(block_size, n_embd)\n",
-    "        self.sa_head = Head(n_embd)\n",
+    "        self.blocks = nn.Sequential(\n",
+    "            Block(n_embd, n_head=4),\n",
+    "            Block(n_embd, n_head=4),\n",
+    "            Block(n_embd, n_head=4),\n",
+    "            nn.LayerNorm(n_embd),\n",
+    "        )\n",
     "        self.lm_head = nn.Linear(n_embd, vocab_size)\n",
+    "        \n",
     "        \n",
     "    def forward(self, idx, targets=None):\n",
     "        B, T = idx.shape\n",
@@ -1061,7 +1104,7 @@
     "        tok_emb = self.token_embedding_table(idx)\n",
     "        pos_emb = self.position_embedding_table(torch.arange(T, device=device))\n",
     "        x = tok_emb + pos_emb\n",
-    "        x = self.sa_head(x) # Apply one-head of self attention\n",
+    "        x = self.blocks(x) # Apply blocks of multi-headed attention\n",
     "        logits = self.lm_head(x)\n",
     "        \n",
     "        if targets is None:\n",
